solutions/multi-cluster gateway with custom error pages/resources/error-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: error-app
      version: v1
  template:
    metadata:
      labels:
        app: error-app
        version: v1
    spec:
      containers:
      - name: error-app
        image: europe-west4-docker.pkg.dev/PROJECT_ID/ARTIFACT_REPOSITRY_NAME/error-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: serv-error-app-v1
spec:
  selector:
    app: error-app
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
---
