solutions/multi-cluster gateway with custom error pages/resources/http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-route
spec:
  parentRefs:
  - kind: Gateway
    name: application-ext-gateway
  rules:
  - backendRefs:
    - name: store-v1
      port: 8080
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: store-v2
      port: 8080
  - matches:
    - path:
        value: /de
    backendRefs:
    - name: store-german
      port: 8080
  - matches:
    - path:
        value: /error-app
    backendRefs:
    - name: serv-error-app-v1
      port: 8080
